compiler/testData/diagnostics/tests/ProcessingEmptyImport.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
import<!SYNTAX!><!>

fun firstFun() {}

/* GENERATED_FIR_TAGS: functionDeclaration */
